Fixed overflow issue on articles ul as there was a margin on both sides 301px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,7 @@ footer .logo {
 
 .navigationindexforarticles {
     border: 2px solid #c97d60;
-    margin: 0 301.672px;
+    
     
 }
 
